--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,10 @@ on:
       - yongwook
 
 env:
-  S3_BUCKET_NAME: tiltil
-  RESOURCE_PATH: ./src/main/resources/application.yaml
-  CODE_DEPLOY_APPLICATION_NAME: tiltil-code-deploy
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: tiltil-server
+  S3_BUCKET_NAME: yongwookbucket
+  RESOURCE_PATH: ./src/main/resources/application.properties
+  CODE_DEPLOY_APPLICATION_NAME: yongwookcode-deploy
+  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: yongwook-server
 
 jobs:
   build:
@@ -24,13 +24,14 @@ jobs:
         with:
           java-version: 11
         
-        # [1]
-      - name: Set yaml file 
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: ${{ env.RESOURCE_PATH }} 
-        env:
-          override.value: ${{ secrets.DI_FROM_SECRET }} 
+#         # [1]
+#       - name: Set yaml file 
+#         uses: microsoft/variable-substitution@v1
+#         with:
+#           files: ${{ env.RESOURCE_PATH }} 
+#         env:
+#           override.value: ${{ secrets.DI_FROM_SECRET }} 
+#           # override.value: 'from deploy.yaml' <-- 이렇게 사용해도 주입이 된다.
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
@@ -56,7 +57,7 @@ jobs:
 
         # [5]
       - name: Upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://yongwookbucket/$GITHUB_SHA.zip
 
         # [6]
       - name: Code Deploy
