--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,8 +14,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://picboy.czwa1zqemqal.ap-northeast-2.rds.amazonaws.com/picboy?serverTimezone=Asia/Seoul
-    username: picboy #${{ secret.AWS_RDS_USERNAME }}
-    password: Dnr:4fkdgo! #${{ secret.AWS_RDS_PASSWORD }}
+    username: ${{ secrets.AWS_RDS_USERNAME }}
+    password: ${{ secrets.AWS_RDS_PASSWORD }}
 
   jpa:
     hibernate:
