--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   S3_BUCKET_NAME: yongwookbucket
-  RESOURCE_PATH: ./src/main/resources/application.properties
+#   RESOURCE_PATH: ./src/main/resources/application.properties
   CODE_DEPLOY_APPLICATION_NAME: yongwookcode-deploy
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: yongwook-server
 
